# backend/src/routes/userRoute.js
@@ -1,16 +1,17 @@
 import express from "express"
 import userController from "../controllers/userController.js"
 import validateUser from "../middlewares/userMiddleware.js";
+import { authenticationToken , adminRole} from "../middlewares/authLoginMiddleware.js";
 
 
 const userRouter = express.Router();
 
-userRouter.get("/", userController.getAllUsers);
-userRouter.get("/user_id/:user_id", userController.getUserById);
-userRouter.get("/email/:user_email", userController.getuserByEmail);
-userRouter.post("/", validateUser, userController.createUser);
-userRouter.put("/:user_id", validateUser, userController.updateUser);
-userRouter.delete("/:user_id", userController.deleteUser);
+userRouter.get("/",authenticationToken, userController.getAllUsers);
+userRouter.get("/user_id/:user_id",authenticationToken, userController.getUserById);
+userRouter.get("/email/:user_email", authenticationToken, userController.getuserByEmail);
+userRouter.post("/", authenticationToken, validateUser,validateUser,  userController.createUser);
+userRouter.put("/:user_id",authenticationToken, validateUser, userController.updateUser);
+userRouter.delete("/:user_id",authenticationToken, userController.deleteUser);
 
 
 export default userRouter;
